--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
-# Compiled class file
+# 在.gitingore文件中,每一行指定一个忽略规则
+.classpath
+.idea
+.idea/*
+
+.metadata
+.project
+.recommenders
+.settings
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
 *.nar
@@ -18,6 +16,9 @@
 *.zip
 *.tar.gz
 *.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.iml
+bin
+logs
+Servers
+target
+src/test
